--- a/08-HTML/demos/clase1/miPrimerHTML.html
+++ b/08-HTML/demos/clase1/miPrimerHTML.html
@@ -9,5 +9,6 @@
     <a href="http://www.google.com">Link a Google</a>
     <img src="http://placekitten.com/500/500" />
     <img src="./gatito.jpg" />
+    <a href=""></a>
   </body>
 </html>
